# animator

./: .gitignore  CMakeLists.txt  README.md  animator.cxx  animator.i  build.cmd  domake.cmd  dopymod.cmd  doswig.cmd  env.cmd  make.cmd  test.cxx  test.i  version.h.in
code/model/: CMakeLists.txt  layer.cxx  layer.h  size.cxx  size.h
docs/: .~lock.requirements.ods#  requirements.ods
prototype/: canvas.py  canvas_test.py  layer.py  layer_test.py
py/: regr.cmd  regr.py
py/unittests/: .regr  animodel_layer.py
src/model/: layer.cxx  layer.h
swig/: CMakeLists.txt  animator.i
tests/: CMakeLists.txt  layer_test.cxx
